--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ python-docx==1.2.0
 ruff==0.12.8
 safehttpx==0.1.6
 semantic-version==2.10.0
-sentence-transformers==2.2.2  # (from your usage)
+sentence-transformers==2.2.2
 soupsieve==2.7
 sphinx==8.1.3
 sphinx-autodoc-typehints==3.0.1
